# collint

./: .gitignore  Cargo.toml  LICENSE  README.md  agent.m  imitation_proj.m
blackboard/: Cargo.toml  blackboard.py  blackboard_default.toml  default.toml  imitative_default.toml  py.csv
blackboard/data/: out2.csv
blackboard/src/: blackboard.cpp  blackboard.h  blackboard.rs  experiment.cpp  lib.rs  main.rs  out.csv  random.h  test.cpp  test.hpp
data/: avg.csv  avg.xlsx  default.csv  out.csv
default/: blackboard_default.toml
imitation/: imitation_proj.m
matlab/: imitation_proj.m
python/: Cargo.toml  example.py  pyproject.toml
python/.github/workflows/: CI.yml
python/pysrc/collint/: __init__.py  blackboard.py  config.py  experiment.py  imitative.py  util.py  wrapper.py
python/src/: lib.rs
src/: blackboard.rs  common.rs  imitative.rs  lib.rs  main.rs
